--- a/index.html
+++ b/index.html
@@ -1,41 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theodore Martin</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 50%;
-            margin: 50px auto;
-        }
-        table, th, td {
-            border: 1px solid black;
-        }
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-<table>
-    <tr>
-        <th>Name</th>
-        <td>Theodore Martin</td>
-    </tr>
-    <tr>
-        <th>Introduction</th>
-        <td>Hello, I am a junior at GMU majoring in IT. I'm 20 and concentrate in Cloud Computing</td>
-    </tr>
-    <tr>
-        <th>Hobbies</th>
-        <td>Computer hardware, spending time with my two dogs, going on walks, going to museums and fun activities</td>
-    </tr>
-</table>
-
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="ethics.html">Ethics</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome to My IT 304 Site.</h1>
+        <p>I am a junior at GMU majoring in IT. I'm 20 and concentrate in Cloud Computing. gMy hobbies are Computer hardware, spending time with my two dogs, going on walks, going to museums and fun activities.</p>
+    </main>
+    <footer>
+        <p>IT-304 Assignment 4</p>
+    </footer>
 </body>
 </html>
